Fixed overlapping icons

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -75,6 +75,10 @@ $button-focus-color: yellow
 
 /* map */
 
+.mapControls
+    position: absolute
+    z-index: 5
+    
 .mapColumn
     min-height: 40vh
     @media screen and ( max-width: 768px )
@@ -126,7 +130,7 @@ $button-focus-color: yellow
 .mapboxgl-marker
     span
         font-size: 25px
-        z-index: 555
+        z-index: 1
 
 /* campground cards */
 
